--- a/click_to_take_1/index.css
+++ b/click_to_take_1/index.css
@@ -51,6 +51,7 @@ header{
     position: fixed;
     width: 100%;
     z-index: 3;
+    background: #270602;
     transition: background 0.5s;
 
 }
@@ -81,6 +82,16 @@ header .logo{
     width: 40%;
     float: left;
 }
+/* محرك البحث */
+#search{
+    position: absolute;
+    top:20%;
+    left:28%;
+}
+
+
+
+
 header .list{
     text-align: right;
 
@@ -123,6 +134,9 @@ header .list> li a:hover:after{
 }
 /* تعديل قائمة الخيارات */
 .list >li .dropdown{
+    height: auto;
+    width: auto;
+    line-height: 50px;
     font-family: 'Varela Round' ;
     list-style: none;
     position: absolute;
@@ -224,19 +238,17 @@ header .list> li a:hover:after{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 10px;
     top: 130px;
     margin: auto;
-    
-    overflow-x: scroll;
-    
+    justify-content: center;
+        
    width: 100%;
+   height: 100%;
    gap: 10px;
 
 }
 
 .product {
-
     width: 220px;
     height:300px;
     border: 1px solid #ccc;
@@ -246,7 +258,7 @@ header .list> li a:hover:after{
 
 .product_img {
     width: 100%; /* تأكيد أن العنصر يأخذ عرض 100% من حاويته */
-    height: 300px; /* ضع ارتفاعًا ثابتًا أو قيمة مناسبة */
+    height: 100%; /* ضع ارتفاعًا ثابتًا أو قيمة مناسبة */
     overflow: hidden; /* لضمان عدم تجاوز الصورة حدود الحاوية */
     border-radius: 10px;
 }
@@ -297,6 +309,11 @@ header .list li .active{
 
 /* تحديد استجابة الوسائط */
 @media (max-width:431px) {
+    #search{
+        position: absolute;
+        top:20%;
+        left:28%;
+    }
 
     .continer{
         margin:0px;
@@ -321,7 +338,7 @@ header .list li .active{
     header .list , .media_4 .list{
         text-align: right;
         margin-top: 15px;
-        margin-left: 50px;
+        margin-left: 30px;
     
         width: 95%;
         float: left;
@@ -332,7 +349,7 @@ header .list > li a,.media_4 .list > li a{
     text-decoration: none;
     color: white;
     display: block;
-    padding: 10px 15px;
+    padding: 10px 10px;
 }
 
 
@@ -370,5 +387,15 @@ header .list > li a,.media_4 .list > li a{
         transition: opacity 0.7s;
         margin: 30px 0px 0px 6px;
     }
-    
+
+
+
+    /* تعديل حجم المنتجات */
+    .product {
+        width: 87px;
+        height: 120px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 } 
