تحديث ملف السي اس اس لزر البحث وعرض القوائم

--- a/click_to_take_1/index.css
+++ b/click_to_take_1/index.css
@@ -2,6 +2,7 @@
 *{
     margin:0;
     padding: 0;
+    font-family: 'Cairo'
 }
 /* اختيار الخط */
 
@@ -11,6 +12,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
 /* الجنرل المنت */
 
+
+:root{
+
+    --systemColor:#e74c3c;
+}
 .clear{
     clear: both;
 }
@@ -21,6 +27,10 @@
 .blackiconcolor{
 color:#e74c3c;
 
+}
+
+body{
+    font-family: 'Cairo';
 }
 
 
@@ -119,6 +129,7 @@ header .list > li a{
 header .list > li a:after{
     content: "";
     width: 0%;
+    margin-top: 5px;
     height: 3px;
     border-radius: 5px;
     display: block;
@@ -126,6 +137,10 @@ header .list > li a:after{
     transition: width 1s;
 }
 header .list> li a:hover:after{
+    width: 100%;
+}
+
+header .list>li >.active:after{
     width: 100%;
 }
 
@@ -236,11 +251,12 @@ header .list> li a:hover:after{
 .products {
     position: relative;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 20px;
     top: 130px;
     margin: auto;
-    justify-content: center;
+    justify-content: flex-start;
+    overflow: scroll;
         
    width: 100%;
    height: 100%;
@@ -249,26 +265,49 @@ header .list> li a:hover:after{
 }
 
 .product {
-    width: 220px;
-    height:300px;
+    min-width: 220px;
+    min-height:420px;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 } 
 
 .product_img {
+    position: relative;
     width: 100%; /* تأكيد أن العنصر يأخذ عرض 100% من حاويته */
     height: 100%; /* ضع ارتفاعًا ثابتًا أو قيمة مناسبة */
     overflow: hidden; /* لضمان عدم تجاوز الصورة حدود الحاوية */
     border-radius: 10px;
+    text-align: center;
 }
 
 .product_img img {
     width: 100%; /* تأكيد أن الصورة تأخذ عرض 100% من حاويتها */
-    height: 100%; /* تأكيد أن الصورة تأخذ ارتفاع 100% من حاويتها */
+    height: 63%; /* تأكيد أن الصورة تأخذ ارتفاع 100% من حاويتها */
     object-fit: cover; /* تأكيد تكبير أو تصغير الصورة بحيث تغطي العنصر بأكمله دون تشويه النسبة */
 }
 
+.fa-star{
+    color: #636363;
+}
+.rate_4{
+    color:#f1c40f ;
+}
+
+.price{
+    border-radius: 10px;
+    margin: auto;
+    
+    font-size: 20px;
+
+    
+  
+}
+
+.prod{
+    font-size:16px;
+    font-family: 'Cairo';
+}
 
 .product h2 {
     margin: 10px 0;
@@ -278,25 +317,25 @@ header .list> li a:hover:after{
     margin: 5px 0;
 }
 
+
 .product button {
     background-color: #f1c40f;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 44px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 20px;
     transition-duration: 0.4s;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .product button:hover {
     background-color: #e74c3c;
     color: white;
-    transform: translate(0,10px);
+    transform: translate(0,1px);
 }
 
 header .list li .active{
@@ -309,39 +348,73 @@ header .list li .active{
 
 /* تحديد استجابة الوسائط */
 @media (max-width:431px) {
-    #search{
-        position: absolute;
-        top:20%;
-        left:28%;
-    }
+    
 
-    .continer{
-        margin:0px;
-        text-align: right;
+    #search{
+
+        background-image: url(../image/pngegg.png);
+        background-repeat: no-repeat;
+        background-position-x:10px;
+        padding-left: 10px;
+        background-position-y: 5px;
+        background-size: 20px;
+        flex: 3;
+        width:70%;
+        border-radius: 30px;
+        height: 34px;
+    }
+    #search:focus{
+        background-image: none;
+    }
+    
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
+    .continer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+        margin-top: 6px;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: flex-end;
     }
     .media_4{
         width: 100%;
     }
     header .logo img,.media_4 .logo img{
-        height: 20px;
+        height: 40px;
     }
     
     
     header .logo,.media_4 .logo{
     
-        width: 5%;
-        float: left;
+        
+        display: flex;
+        width: 100%;
+        height: 30px;
+        position: relative;
+    
     }
    
 
 
     header .list , .media_4 .list{
+        display: flex;
         text-align: right;
         margin-top: 15px;
         margin-left: 30px;
+        justify-content:space-between;
     
         width: 95%;
-        float: left;
+    
     }
     
 header .list > li a,.media_4 .list > li a{
@@ -392,10 +465,30 @@ header .list > li a,.media_4 .list > li a{
 
     /* تعديل حجم المنتجات */
     .product {
-        width: 87px;
-        height: 120px;
+        min-width: 120px;
+        min-height: 240px;
+        margin-bottom: 10px;
         border: 1px solid #ccc;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .prod{
+        font-size: 9px;
+    }
+    .product button {
+        height: 30px;
+        width: 100%;
+        background-color: #f1c40f;
+        color: white;
+        border: none;
+        padding: 0px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 10px;
+        transition-duration: 0.4s;
+        border-radius: 0px;
+        vertical-align: middle;
     }
 } 
